--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -1,7 +1,116 @@
+@import "compass/css3";
+
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /* write your CSS here */
+
+body {
+  background-color: black;
+  color: white;
+}
+
+.menu::before, .menu::after {
+  box-sizing: border-box;
+}
+
+.btn1 {
+  width: 60px;
+  height: 60px;
+  top: 100px;
+  left: 0px;
+  transition-duration: 0.5s;
+}
+
+.btn1:hover {
+  cursor: pointer;
+} 
+
+.btn1 .icon-left::after {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 30px;
+  height: 8px;
+  background-color: #212121;
+  content: "";
+  top: 20px;
+}
+
+.btn1 .icon-left::before {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 30px;
+  height: 8px;
+  background-color: #212121;
+  content: "";
+  top: -20px;
+}
+
+.btn1 .icon-left {
+  transition-duration: 0.5s;
+  position: absolute;
+  height: 8px;
+  width: 30px;
+  top: 30px;
+  background-color: #212121;
+  left: 0px;
+}
+
+.btn1 .icon-right::after {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 30px;
+  height: 8px;
+  background-color: #212121;
+  content: "";
+  top: 20px;
+}
+
+.btn1 .icon-right::before {
+  transition-duration: 0.5s;
+  position: absolute;
+  width: 30px;
+  height: 8px;
+  background-color: #212121;
+  content: "";
+  top: -20px;
+}
+
+.btn1 .icon-right {
+  transition-duration: 0.5s;
+  position: absolute;
+  height: 8px;
+  width: 30px;
+  top: 30px;
+  background-color: #212121;
+  left: 30px;
+}
+
+.btn1.open .icon-left::after {
+  transform: rotateZ(-45deg) scaleX(1.4) translate(4px, -4px);
+}
+
+.btn1.open .icon-left::before {
+  transform: rotateZ(45deg) scaleX(1.4) translate(4px, 4px);
+}
+
+.btn1.open .icon-left {
+  transition-duration: 0.5s;
+  background: transparent;
+}
+
+.btn1.open .icon-right::after {
+  transform: rotateZ(45deg) scaleX(1.4) translate(-4px, -4px);
+}
+
+.btn1.open .icon-right::before {
+  transform: rotateZ(-45deg) scaleX(1.4) translate(-4px, 4px);
+}
+
+.btn1.open .icon-right {
+  transition-duration: 0.5s;
+  background: transparent;
+}
