--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -1,100 +1,103 @@
 @import "compass/css3";
 
+:root {
+  --menu-color: white;
+  --icon-width: 18px;
+  --icon-height: 3px;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-/* write your CSS here */
-
 body {
   background-color: black;
   color: white;
 }
 
-.menu::before, .menu::after {
+#menu::before, #menu::after {
   box-sizing: border-box;
 }
 
 .btn1 {
   width: 60px;
   height: 60px;
-  top: 100px;
-  left: 0px;
   transition-duration: 0.5s;
+  position: absolute;
+  right: 0;
+  z-index: 2;
 }
-
-.btn1:hover {
-  cursor: pointer;
-} 
 
 .btn1 .icon-left::after {
   transition-duration: 0.5s;
   position: absolute;
-  width: 30px;
-  height: 8px;
-  background-color: #212121;
+  width: var(--icon-width);
+  height: var(--icon-height);
+  background-color: var(--menu-color);
   content: "";
-  top: 20px;
+  top: 0;
 }
 
 .btn1 .icon-left::before {
   transition-duration: 0.5s;
   position: absolute;
-  width: 30px;
-  height: 8px;
-  background-color: #212121;
+  width: var(--icon-width);
+  height: var(--icon-height);
+  background-color: var(--menu-color);
   content: "";
-  top: -20px;
+  top: -10px;
 }
 
 .btn1 .icon-left {
   transition-duration: 0.5s;
   position: absolute;
-  height: 8px;
+  height: 0;
   width: 30px;
   top: 30px;
-  background-color: #212121;
-  left: 0px;
+  background-color: var(--menu-color);
+  right: 23px;
 }
 
 .btn1 .icon-right::after {
   transition-duration: 0.5s;
   position: absolute;
-  width: 30px;
-  height: 8px;
-  background-color: #212121;
+  width: var(--icon-width);
+  height: var(--icon-height);
+  background-color: var(--menu-color);
   content: "";
-  top: 20px;
+  top: 0;
 }
 
 .btn1 .icon-right::before {
   transition-duration: 0.5s;
   position: absolute;
-  width: 30px;
-  height: 8px;
-  background-color: #212121;
+  width: var(--icon-width);
+  height: var(--icon-height);
+  background-color: var(--menu-color);
   content: "";
-  top: -20px;
+  top: -10px;
 }
 
 .btn1 .icon-right {
   transition-duration: 0.5s;
   position: absolute;
-  height: 8px;
+  height: 0;
   width: 30px;
   top: 30px;
-  background-color: #212121;
-  left: 30px;
+  background-color: var(--menu-color);
+  right: 10px;
 }
 
 .btn1.open .icon-left::after {
-  transform: rotateZ(-45deg) scaleX(1.4) translate(4px, -4px);
+  transform: rotateZ(-45deg) scaleX(1.2) translate(4px, -4px);
+  top: 12px;
 }
 
 .btn1.open .icon-left::before {
-  transform: rotateZ(45deg) scaleX(1.4) translate(4px, 4px);
+  transform: rotateZ(45deg) scaleX(1.2) translate(4px, 4px);
+  top: -12px;
 }
 
 .btn1.open .icon-left {
@@ -103,14 +106,68 @@ body {
 }
 
 .btn1.open .icon-right::after {
-  transform: rotateZ(45deg) scaleX(1.4) translate(-4px, -4px);
+  transform: rotateZ(45deg) scaleX(1.2) translate(-4px, -4px);
+  top: 12px;
 }
 
 .btn1.open .icon-right::before {
-  transform: rotateZ(-45deg) scaleX(1.4) translate(-4px, 4px);
+  transform: rotateZ(-45deg) scaleX(1.2) translate(-4px, 4px);
+  top: -12px;
 }
 
 .btn1.open .icon-right {
   transition-duration: 0.5s;
   background: transparent;
+}
+
+#hero-image {
+  max-width: 100vw;
+}
+
+.overlay {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay {
+  position: absolute;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay {overflow-y: auto;
+    font-size: 40px;
+    top: 15px;
+    right: 35px;}
+  .overlay a {font-size: 20px}
 }
