--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -134,30 +134,35 @@ body {
   top: 0;
   left: 0;
   background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0, 0.9);
   overflow-y: hidden;
   transition: 0.5s;
 }
 
 .overlay-content {
   position: relative;
-  top: 25%;
+  top: 10vh;
   width: 100%;
-  text-align: center;
   margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.4em;
 }
 
 .overlay a {
-  padding: 8px;
+  padding: 11px 12px;
   text-decoration: none;
-  font-size: 36px;
-  color: #818181;
+  font-size: 1.7rem;
+  color: #ffffff;
   display: block;
   transition: 0.3s;
+  margin: 0 5vw;
+  letter-spacing: 0.1rem;
 }
 
 .overlay a:hover, .overlay a:focus {
-  color: #f1f1f1;
+  background-color: #e9dcff;
+  color: black;
+  border-radius: 7px;
 }
 
 .overlay {
@@ -200,5 +205,7 @@ div > button {
   font-weight: 600;
   border: none;
   cursor: pointer;
-  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
