--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -149,7 +149,7 @@ body {
 }
 
 .overlay a {
-  padding: 11px 12px;
+  padding: 11px;
   text-decoration: none;
   font-size: 1.7rem;
   color: #ffffff;
@@ -169,14 +169,9 @@ body {
   position: absolute;
   right: 45px;
   font-size: 60px;
-}
-
-@media screen and (max-height: 450px) {
-  .overlay {overflow-y: auto;
-    font-size: 40px;
-    top: 15px;
-    right: 35px;}
-  .overlay a {font-size: 20px}
+  background-color: #000000;
+  color: black;
+  border-radius: 7px;
 }
 
 #content {
