--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -4,22 +4,29 @@
   --menu-color: white;
   --icon-width: 18px;
   --icon-height: 3px;
+  --button-BG-color: #E9DCFF;
+  --app-BG-color: #1E1E1E;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
+  background-color: var(--app-BG-color);
 }
 
-body {
+body {--BG-color
   background-color: black;
   color: white;
 }
 
 #menu::before, #menu::after {
   box-sizing: border-box;
+}
+
+svg {
+  display: inline-block;
 }
 
 .btn1 {
@@ -121,6 +128,7 @@ body {
   transition-duration: 0.5s;
   background: transparent;
 }
+  
 
 #hero-image {
   max-width: 100vw;
@@ -128,12 +136,11 @@ body {
 
 .overlay {
   height: 0%;
-  width: 100%;
+  width: 100vw;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(0,0,0);
   overflow-y: hidden;
   transition: 0.5s;
 }
@@ -149,18 +156,18 @@ body {
 }
 
 .overlay a {
-  padding: 11px;
+  padding: 0 11px;
   text-decoration: none;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
+  font-weight: 600;
   color: #ffffff;
   display: block;
   transition: 0.3s;
   margin: 0 5vw;
-  letter-spacing: 0.1rem;
 }
 
 .overlay a:hover, .overlay a:focus {
-  background-color: #e9dcff;
+  background-color: var(--button-BG-color);
   color: black;
   border-radius: 7px;
 }
@@ -169,8 +176,6 @@ body {
   position: absolute;
   right: 45px;
   font-size: 60px;
-  background-color: #000000;
-  color: black;
   border-radius: 7px;
 }
 
@@ -179,7 +184,7 @@ body {
 }
 
 div > p {
-  color: #e9dcffb4;
+  color: var(--button-BG-color);
   font-size: 0.8rem;
   font-weight: 100;
   letter-spacing: 0.2rem;
@@ -192,7 +197,7 @@ div > h1 {
 }
 
 div > button {
-  background-color: #e9dcff;
+  background-color: var(--button-BG-color);
   padding: 11px 12px;
   border-radius: 7px;
   font-size: 1.3rem;
@@ -203,4 +208,38 @@ div > button {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+svg {
+  background: initial;
+}
+@media screen and (min-width: 1300px) {
+  #menu {
+    display: none;
+  }
+
+  .overlay-content {
+    flex-direction: row;
+    gap: 0;
+  }
+
+  .overlay a {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+
+  .overlay a:hover, .overlay a:focus {
+    background-color: inherit;
+    color: var(--button-BG-color);
+    border-radius: none;
+  }
+
+  #myNav {
+    border: 2px solid red;
+    height: 10vh;
+  }
+
+  .overlay {
+    overflow: auto;
+  }
 }
