--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -255,7 +255,6 @@ svg {
   .account-buttons {
     display: flex;
     justify-content: flex-end;
-    flex-grow: 2;
   }
 
   #content {
@@ -265,6 +264,7 @@ svg {
 
   #content > p {
     font-size: 1rem;
+    font-weight: 500;
   }
 
   #content > h1 {
