--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -153,6 +153,7 @@ svg {
   display: flex;
   flex-direction: column;
   gap: 0.4em;
+  align-items: baseline;
 }
 
 .overlay a {
@@ -233,7 +234,7 @@ svg {
   }
 
 
-  .overlay a:hover, .overlay a:focus {
+  .overlay-content a:hover, .overlay-content a:focus {
     background-color: inherit;
     color: var(--button-BG-color);
     border-radius: none;
@@ -255,6 +256,15 @@ svg {
   .account-buttons {
     display: flex;
     justify-content: flex-end;
+    gap: 2vw;
+  }
+
+  .account-buttons > a {
+    background-color: var(--button-BG-color);
+    padding: 11px 12px;
+    border-radius: 7px;
+    color: initial;
+    width: 50%;
   }
 
   #content {
