--- a/payment-landing-page/payment-landing-page/style.css
+++ b/payment-landing-page/payment-landing-page/style.css
@@ -128,18 +128,21 @@ svg {
   
 
 #hero-image {
-  max-width: 100vw;
+  max-width: 94vw;
+  margin-left: 6vw;
+  margin-top: 1.5vh;
 }
 
 .overlay {
   height: 0%;
   width: 100vw;
-  position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
   overflow-y: hidden;
   transition: 0.5s;
+  position: absolute;
+  font-size: 60px;
 }
 
 .overlay-content {
@@ -171,27 +174,19 @@ svg {
   color: black;
 }
 
-.overlay {
-  position: absolute;
-  right: 45px;
-  font-size: 60px;
-}
-
 #content {
-  margin: 10vh 5vw 0;
+  margin: 13vh 5vw 0;
 }
 
 div > p {
   color: var(--button-BG-color);
   font-size: 0.8rem;
-  font-weight: 100;
+  font-weight: 400;
   letter-spacing: 0.2rem;
-  font-weight: 600;
 }
 
 #content > h1 {
-  font-size: 20px;
-  letter-spacing: 0.2rem;
+  font-size: 2.5rem;
 }
 
 div > button {
@@ -211,11 +206,8 @@ div > button {
 
 .account-buttons {
   display: flex;
+  flex-direction: column;
   gap: 0.4em;
-}
-
-.account-buttons + a {
-  margin-bottom: 0.4em;
 }
 
 .account-buttons > a {
@@ -238,6 +230,7 @@ div > button {
     font-size: 1.2rem;
     font-weight: 600;
     margin: 0;
+    width: auto;
   }
 
 
@@ -247,11 +240,12 @@ div > button {
   }
 
   #myNav {
-    height: 10vh;
+    height: 15vh;
   }
 
   .overlay {
     overflow: auto;
+    margin-left: 8vw;
   }
 
   body > svg {
@@ -260,21 +254,25 @@ div > button {
   }
 
   .account-buttons {
-    justify-content: flex-end;
-    gap: 2vw;
+    margin-left: 9vw;
+    flex-direction: row;
+    gap: 0.9vw;
   }
 
   .account-buttons > a {
     background-color: var(--button-BG-color);
-    padding: 11px 12px;
     color: initial;
-    flex-basis: 0;
-    flex-grow: 1;
+    flex: 1;
+    white-space: nowrap;
+    width: 10vw;
+    padding: 1.5vh 0;
+    text-align: center;
+    font-size: 1.4rem;
   }
 
   #content {
     max-width: 542px;
-    margin-top: 25vh;
+    margin-top: 40vh;
   }
 
   #content > p {
@@ -283,11 +281,20 @@ div > button {
   }
 
   #content > h1 {
-    font-size: 3rem;
+    font-size: 3.2rem;
+    font-weight: 600;
   }
 
   #content > button {
     font-size: 1.5rem;
     font-weight: 700;
+    margin-top: 25px;
+  }
+
+  #hero-image {
+    position: absolute;
+    max-width: 40vw;
+    top: 20vh;
+    right: 10vw;
   }
 }
